acf override option

--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -97,3 +97,4 @@ warden.damage=damage
 warden.-s_cleaned_up_all_disconnected_players_props=%s cleaned up all disconnected players' props
 warden.-s_cleaned_up_-ss_props=%s cleaned up %s's props
 warden.-s_froze_-ss_props=%s froze %s's props
+warden.override_acfs_perms=Override ACF's perms
