change warden_touch behavior

--- a/resource/localization/en-PT/warden.properties
+++ b/resource/localization/en-PT/warden.properties
@@ -18,7 +18,7 @@ warden.material-=material:
 warden.color-=color:
 warden.perms-=perms:
 warden.configure_prop_protection_settings=Mess with prop protection settin's.
-warden.let_me_touch_entities=Let me touch things
+warden.let_me_touch_others_entities=Let me touch others' things
 warden.let_me_touch_my_own_entities=Let me touch my own things
 warden.right_click_to_copy_name-steamid=Right click t' copy name/steamID
 warden.right_click_to_cleanup-freeze_props=Right click t' swab/freeze props
