--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -18,7 +18,7 @@ warden.material-=material:
 warden.color-=color:
 warden.perms-=perms:
 warden.configure_prop_protection_settings=Configure prop protection settings.
-warden.let_me_touch_entities=Let me touch entities
+warden.let_me_touch_others_entities=Let me touch others' entities
 warden.let_me_touch_my_own_entities=Let me touch my own entities
 warden.right_click_to_copy_name-steamid=Right click to copy name/steamID
 warden.right_click_to_cleanup-freeze_props=Right click to cleanup/freeze props
