--- a/resource/localization/en-PT/warden.properties
+++ b/resource/localization/en-PT/warden.properties
@@ -27,7 +27,7 @@ warden.clean_up_all_disconnected_players_props=Swab up all sailed pirates' props
 warden.can_also_be_done_with_cupdis=Can also be done with !cupdis
 warden.can_also_be_set_with_al=Can also be set with !al
 warden.admin_level=Captain level
-warden.configure_the_entity_info_display=Mess with the thingy info display.
+warden.configure_the_entity_info_display=Mess with th' thingy info display.
 warden.enabled=Enabled
 warden.show_owner=Show owner
 warden.show_class=Show class
@@ -41,12 +41,12 @@ warden.auto=Auto
 warden.small=Small
 warden.normal=Normal
 warden.large=Large
-warden.configure_the_servers_entity_permissions=Mess with the server's thingy permissions.
+warden.configure_the_servers_entity_permissions=Mess with th' server's thingy permissions.
 warden.server_settings_superadmins_only=Server Settin's (fleet captains only)
-warden.on-_is_the_perm_enabled=ON: is the perm enabled?
-warden.df-_is_the_perm_on_by_default=DF: is the perm on by default?
-warden.wa-_does_the_world_have_the_perm=WA: does the map have the perm?
-warden.al-_the_admin_level_to_bypass_the_perm=AL: the captain level t' bypass the perm
+warden.on-_is_the_perm_enabled=ON: is th' perm enabled?
+warden.df-_is_the_perm_on_by_default=DF: is th' perm on by default?
+warden.wa-_does_the_world_have_the_perm=WA: does th' map have th' perm?
+warden.al-_the_admin_level_to_bypass_the_perm=AL: th' captain level t' bypass th' perm
 warden.configure_class_filters=Mess with class filters.
 warden.filters_bypass_blocked_perms=Filters bypass blocked perms
 warden.shown_on_list_using_gold_outlines=Shown on list usin' gold rims
