--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -99,3 +99,4 @@ warden.-s_cleaned_up_-ss_props=%s cleaned up %s's props
 warden.-s_froze_-ss_props=%s froze %s's props
 warden.override_acfs_perms=Override ACF's perms
 warden.save_my_perms_across_sessions=Save my perms across sessions
+warden.block_physics_damage=Block physics damage
