add some more settings

--- a/resource/localization/en-PT/warden.properties
+++ b/resource/localization/en-PT/warden.properties
@@ -59,7 +59,7 @@ warden.block_models_from_being_spawned=Block models from bein' spawned.
 warden.block_list_is_a_whitelist=Block list is a whitelist
 warden.prefix_with_-_to_remove_model=Start with `-` t' remove model
 warden.configure_general_server_settings=Mess with general server settin's.
-warden.players_can_always_affect_bots=pirates can always affect bots
+warden.players_can_always_affect_bots=Pirates can always affect bots
 warden.allow_gravgun_punting=Allow gravgun puntin'
 warden.freeze_players_entities_on_disconnect=Freeze pirates' things on sail
 warden.clean_up_players_entities_on_disconnect=Swab up pirates' things on sail
@@ -99,4 +99,10 @@ warden.-s_cleaned_up_-ss_props=%s swabbed up %s's props
 warden.-s_froze_-ss_props=%s froze %s's props
 warden.override_acfs_perms=Override ACF's perms
 warden.save_my_perms_across_sessions=Store my perms for future quests
-warden.block_physics_damage=Block physics damage
+warden.allow_physics_damage=Allow physics damage
+warden.-ss_props_were_cleaned_up_automatically=%s's things were cast to sea
+warden.notify_the_server_on_cleanup=Tell the whole ship when swabbing
+warden.allow_physgun_reload=Allow physgun reload
+warden.notify_when_perms_are_granted-revoked=Say when perms are given/stolen
+warden.-s_has_granted_you_-s_access=%s has given you %s access
+warden.-s_has_revoked_-s_access_from_you=%s has stolen %s access from you
