--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -99,4 +99,10 @@ warden.-s_cleaned_up_-ss_props=%s cleaned up %s's props
 warden.-s_froze_-ss_props=%s froze %s's props
 warden.override_acfs_perms=Override ACF's perms
 warden.save_my_perms_across_sessions=Save my perms across sessions
-warden.block_physics_damage=Block physics damage
+warden.allow_physics_damage=Allow physics damage
+warden.-ss_props_were_cleaned_up_automatically=%s's props were cleaned up automatically
+warden.notify_the_server_on_cleanup=Notify the server on cleanup
+warden.allow_physgun_reload=Allow physgun reload
+warden.notify_when_perms_are_granted-revoked=Notify when perms are granted/revoked
+warden.-s_has_granted_you_-s_access=%s has granted you %s access
+warden.-s_has_revoked_-s_access_from_you=%s has revoked %s access from you
