improve cami/adminmod support

--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -23,6 +23,10 @@ warden.let_me_touch_my_own_entities=Let me touch my own entities
 warden.right_click_to_copy_name-steamid=Right click to copy name/steamID
 warden.right_click_to_cleanup-freeze_props=Right click to cleanup/freeze props
 warden.also_try_cleanup-pfreezeprops=(also try !cleanup/!pfreezeprops)
+warden.right_click_to_cleanup_props=Right click to cleanup props
+warden.also_try_cleanup=(also try !cleanup)
+warden.right_click_to_freeze_props=Right click to freeze props
+warden.also_try_pfreezeprops=(also try !pfreezeprops)
 warden.clean_up_all_disconnected_players_props=Clean up all disconnected players' props
 warden.can_also_be_done_with_cupdis=Can also be done with !cupdis
 warden.can_also_be_set_with_al=Can also be set with !al
