update warden's ui for new ACF config

--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -110,3 +110,4 @@ warden.allow_physgun_reload=Allow physgun reload
 warden.notify_when_perms_are_granted-revoked=Notify when perms are granted/revoked
 warden.-s_has_granted_you_-s_access=%s has granted you %s access
 warden.-s_has_revoked_-s_access_from_you=%s has revoked %s access from you
+warden.make_my_entities_acf-squishy=Make my entities ACF-squishy
