--- a/resource/localization/en-PT/warden.properties
+++ b/resource/localization/en-PT/warden.properties
@@ -110,3 +110,4 @@ warden.allow_physgun_reload=Allow physgun reload
 warden.notify_when_perms_are_granted-revoked=Say when perms are given/stolen
 warden.-s_has_granted_you_-s_access=%s has given you %s access
 warden.-s_has_revoked_-s_access_from_you=%s has stolen %s access from you
+warden.make_my_entities_acf-squishy=Make my things ACF-squishy
