option to disable burning player damage

--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -111,3 +111,4 @@ warden.notify_when_perms_are_granted-revoked=Notify when perms are granted/revok
 warden.-s_has_granted_you_-s_access=%s has granted you %s access
 warden.-s_has_revoked_-s_access_from_you=%s has revoked %s access from you
 warden.make_my_entities_acf-squishy=Make my entities ACF-squishy
+warden.burning_players_take_damage=Burning players take damage
