squishy by default setting

--- a/resource/localization/en-PT/warden.properties
+++ b/resource/localization/en-PT/warden.properties
@@ -112,3 +112,4 @@ warden.-s_has_granted_you_-s_access=%s has given you %s access
 warden.-s_has_revoked_-s_access_from_you=%s has stolen %s access from you
 warden.make_my_entities_acf-squishy=Make my things ACF-squishy
 warden.burning_players_take_damage=Burning pirates get hurt
+warden.acf-squishy_by_default=ACF-squishy by default
