--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -112,3 +112,4 @@ warden.-s_has_granted_you_-s_access=%s has granted you %s access
 warden.-s_has_revoked_-s_access_from_you=%s has revoked %s access from you
 warden.make_my_entities_acf-squishy=Make my entities ACF-squishy
 warden.burning_players_take_damage=Burning players take damage
+warden.acf-squishy_by_default=ACF-squishy by default
