--- a/resource/localization/en/warden.properties
+++ b/resource/localization/en/warden.properties
@@ -98,6 +98,7 @@ warden.physgun=physgun
 warden.gravgun=gravgun
 warden.use=use
 warden.damage=damage
+warden.acf=ACF
 warden.-s_cleaned_up_all_disconnected_players_props=%s cleaned up all disconnected players' props
 warden.-s_cleaned_up_-ss_props=%s cleaned up %s's props
 warden.-s_froze_-ss_props=%s froze %s's props
